--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/find.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
