--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,10 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/find.css";
+@import "components/icon-row.css";
 /* Screens */
 @import "screens/login.css";
+@import "screens/more.css";
 @import "screens/friends.css";
 
 body {
